load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "istio.io/test-infra/toolbox/testenvmanager/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//toolbox/testenvmanager:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    importpath = "istio.io/test-infra/toolbox/testenvmanager/cmd",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
